# RedsailCut

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: ASSISTANT_BRIEF.md  TODO.md
src/redsailcut/: __main__.py  app.py  blade_offset.py  cut_optimizer.py  hpgl.py  path_order.py  preview.py  rotate.py  serial_io.py  settings.py  sharp_corners.py  svg_parser.py
tests/: test_blade_offset.py  test_cut_optimizer.py  test_hpgl.py  test_path_order.py  test_rotate.py  test_serial_io.py  test_sharp_corners.py  test_svg_parser.py
